# clipman

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CUSTOMIZATIONS.md  GOVERNANCE.md  INSTALL-BLUEFIN.md  LICENSE  NOTICE  README.md  SECURITY.md  clipman.py  com.clipman.Clipman.json  install-bluefin.sh  install.sh  launcher.sh  pyproject.toml  uninstall.sh
.githooks/: _lib.sh  _test.sh  _test_corpus.json  _test_parse.py  commit-msg  pre-commit  pre-push
.github/: FUNDING.yml  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  security-baseline.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: baseline-guard.yml  codeql.yml  delete-merged-branch.yml  dependency-review.yml  labeler.yml  labels.yml  lint.yml  refresh-numbers.yml  release.yml  scorecard.yml  secret-scan.yml  snap-refresh.yml  test.yml  verify-architecture-png.yml
aur/: .SRCINFO  PKGBUILD
clipman/: __init__.py  _version.py  app.py  clipboard_monitor.py  database.py  dbus_service.py  edge_states.py  keybindings.py  preferences.py  snippets_dialog.py  style.css  updates.py  window.py
data/: clipman.service  com.clipman.Clipman.desktop  com.clipman.Clipman.metainfo.xml  io.github.MohammedEl_sayedAhmed.Clipman.desktop  io.github.MohammedEl_sayedAhmed.Clipman.metainfo.xml
docs/: ci-cd.md  dbus-api.md  development.md  hooks.md  index.html  llms-full.txt  llms.txt  maintaining.md  release-checklist.md  robots.txt  sitemap.xml  threat-model.md  translating.md
docs/_data/: numbers.json  stats_history.json
docs/adr/: 0001-record-architecture-decisions.md  0002-baseline-ratchet-for-codeql.md  0003-sha-pin-github-actions.md  0004-pypi-trusted-publishing-oidc.md  0005-paste-mode-as-dbus-arg.md  0006-solo-friendly-branch-protection.md  0007-in-app-update-notifications.md  0008-ratchet-fingerprint-strategy.md  0009-snap-rebuild-cadence.md  0010-versioning-policy.md  README.md
docs/design/: index.html  main-window.html  preferences.html  snippets.html  states.html  theme.js  tokens.css
docs/releases/: README.md  v1.0.5.md  v1.0.6.md
extension/: extension.js  metadata.json
flathub/: io.github.MohammedEl_sayedAhmed.Clipman.json
po/: POTFILES.in  clipman.pot
scripts/: bump-version.sh  install-hooks.sh  refresh_stats.py  render-diagram.sh  screenshot.py  update-aur.sh
snap/: snapcraft.yaml
tests/: test_app.py  test_clipboard_monitor.py  test_database.py  test_entry_point.py  test_keybindings.py  test_updates.py  test_window.py  test_window_utils.py
